[package]
name = "asyncscraper"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.11", features = ["tokio-compat","compat"] }
futures-util-preview = "0.3.0-alpha.11"
hyper = "0.12.19"
hyper-tls = "0.3"
kuchiki = "0.7.2"
mime = "0.3.12"
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
native-tls = "*" 
url = "1.7.2"