[package]
name = "asyncscraper"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
futures-util = "0.3"
hyper = "0.14"
hyper-tls = "0.5"
kuchiki = "0.8"
mime = "0.3"
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
native-tls = "*"
tokio = { version = "1" }
url = "2"